some changes and some part of authors has been changed

--- a/Detailes/detailes.css
+++ b/Detailes/detailes.css
@@ -386,3 +386,65 @@ section {
 .book__quotes-icons {
     text-align: end;
 }
+
+
+/* footer */
+
+.footer__container {
+    display: flex;
+    padding: 20px 50px;
+    background-color: rgba(25, 25, 25, 1);
+}
+
+.footer__card {
+    width: 174px;
+    height: 252px;
+    margin-right: 45px;
+    margin-bottom: 20px;
+    box-shadow: 3px 3px 30px #100f0f, 3px 3px 30px rgb(0 0 0 / 16%);
+    background-image: url(../images/card-bg.png);
+    background-repeat: repeat-y;
+    background-position-x: right;
+    background-position-y: top;
+    text-align: center;
+}
+
+
+/* card content */
+
+.card_content {
+    padding: 12px;
+}
+
+.card__text {
+    font-family: 'Steinbeck';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    color: var(--text);
+}
+
+.card__text span {
+    font-family: 'Steinbeck';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 12px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+
+/* card content icon */
+
+.icons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    margin-top: 7%;
+}
+
+.icons i {
+    margin-right: 8px;
+}
