--- a/add-authors/authors.css
+++ b/add-authors/authors.css
@@ -78,7 +78,7 @@ button:hover {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    margin-top: 150px;
 }
 
 .img__container {
