--- a/add-book/book.css
+++ b/add-book/book.css
@@ -78,7 +78,7 @@ button:hover {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    margin-top: 100px;
 }
 
 .img__container {
@@ -130,6 +130,17 @@ button:hover {
     display: flex;
     flex-direction: column;
     width: 50%;
+}
+
+#author {
+    font-family: 'Roboto';
+    font-weight: 600;
+    font-size: 17px;
+    color: #AAAAAA;
+    border: 1px solid #B4B4BB;
+    border-radius: 10px;
+    padding: 10px 25px;
+    margin-bottom: 10%;
 }
 
 input,
