--- a/profile/profile.css
+++ b/profile/profile.css
@@ -7,6 +7,7 @@
 header {
     width: 100%;
     display: flex;
+    margin-bottom: 30px;
 }
 
 .header__card {
@@ -18,6 +19,11 @@ header {
     margin-right: 5px;
     border-radius: 4px 4px 0px 0px;
     padding: 0 20px;
+    cursor: pointer;
+}
+
+#myAccount__link {
+    background-color: #fff;
 }
 
 .header__span {
@@ -33,11 +39,10 @@ header {
     margin-right: 10px;
 }
 
-section {
+.myAccount {
     display: flex;
     width: 100%;
     justify-content: space-evenly;
-    margin-top: 20px;
 }
 
 .section__img-container {
@@ -74,7 +79,9 @@ label {
 }
 
 #firstName,
-#lastName {
+#lastName,
+#secEmail,
+#secPassword {
     width: 90%;
     height: 44px;
     padding: 20px;
@@ -91,19 +98,24 @@ label {
     margin-bottom: 30px;
 }
 
-.phone__email {
+.phone__email,
+.new__passwords {
     display: flex;
     justify-content: space-between;
     width: 90%;
 }
 
 .phone,
-.email {
+.email,
+.newPassword,
+.confPassword {
     width: 48%;
 }
 
 #phone,
-#email {
+#email,
+#new,
+#conf {
     width: 100%;
     height: 44px;
     padding: 20px;
@@ -132,7 +144,7 @@ label {
 }
 
 #btn {
-    background: #152540;
+    background-color: #152540;
     border-radius: 4px;
     border: none;
     color: #fff;
@@ -142,4 +154,58 @@ label {
     font-weight: 600;
     font-size: 13px;
     line-height: 20px;
+    cursor: pointer;
+}
+
+#btn:hover {
+    background-color: #1263eb;
+}
+
+
+/* security */
+
+#security__form {
+    width: 70%;
+    margin: auto;
+}
+
+#settings {
+    width: 70%;
+    margin: auto;
+}
+
+.radioBtn {
+    width: 60px;
+    height: 30px;
+    background-color: #F3F6F9;
+    border-radius: 20px;
+    position: relative;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.ball {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #ff0000;
+    transform: scale(.8);
+    transition: .4s linear;
+    -webkit-transform: scale(.8);
+    -moz-transform: scale(.8);
+    -ms-transform: scale(.8);
+    -o-transform: scale(.8);
+    cursor: e-resize;
+}
+
+.active {
+    left: 30px;
+    cursor: w-resize;
+    background-color: #3699FF;
+}
+
+.hide {
+    display: none;
 }
