some of the main section has been completed in Js

--- a/Home-page/home.css
+++ b/Home-page/home.css
@@ -254,6 +254,10 @@ main {
     color: var(--text);
 }
 
+.card__text a {
+    color: var(--text);
+}
+
 .card__text span {
     font-family: 'Steinbeck';
     font-style: normal;
